# lokimon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LoggingHelpers.cmake
data/: attacks.json  species.json
data/lang/: lang_en-us.json  lang_fr-fr.json  lang_list.json  lang_list.langdb.json
data/maps/: base2.tileset.json  test.json  test.map.json  test2.json  test2.map.json  tileset.json
data/prefabs/: map.prefab.json
data/scenes/: overworld.scene.json
data/sprites/: player.json
data/ui/: Skin.json
data/ui/9-way/: Default.json  Test_9-way.json
saves/: inputs.json  lokimon.inputs.json
src/: main.cpp
src/core/: Application.cpp  Application.hpp  CMakeLists.txt  LokimonApplication.cpp  LokimonApplication.hpp  ViewData.cpp  ViewData.hpp  path.hpp
src/data/: Attack.hpp  AttackList.cpp  AttackList.hpp  Constants.hpp  Elements.cpp  Elements.hpp  GameData.cpp  GameData.hpp  Species.hpp  SpeciesList.cpp  SpeciesList.hpp
src/gameplay/: BattleContext.hpp  BattleTurn.hpp  CMakeLists.txt  Monster.cpp  Monster.hpp  MonsterBattleData.hpp  Player.cpp  Player.hpp  PlayerMapStatus.hpp  Stats.hpp  Trainer.cpp  Trainer.hpp
src/misc/: CMakeLists.txt  Direction.cpp  Direction.hpp  Math.hpp
src/models/: CMakeLists.txt  Models.md
src/models/data/: Attack.cpp  Attack.hpp  AttackList.cpp  AttackList.hpp  CMakeLists.txt  Constants.hpp  Elements.cpp  Elements.hpp  GameData.cpp  GameData.hpp  Species.cpp  Species.hpp  SpeciesList.cpp  SpeciesList.hpp
src/models/gameplay/: BattleContext.hpp  BattleData.hpp  BattleTurn.hpp  CMakeLists.txt  Monster.cpp  Monster.hpp  Player.cpp  Player.hpp  PlayerMapStatus.hpp  Stats.cpp  Stats.hpp  Trainer.cpp  Trainer.hpp
src/models/misc/: CMakeLists.txt  Math.hpp
src/models/other/: CMakeLists.txt  Direction.cpp  Direction.hpp  TranslatedString.cpp  TranslatedString.hpp
src/screens/: CMakeLists.txt
src/screens/base/: BaseScreen.cpp  BaseScreen.hpp  CMakeLists.txt
src/screens/battle/: AttackCutsceneScreen.cpp  AttackCutsceneScreen.hpp  AttackMenuScreen.cpp  AttackMenuScreen.hpp  AttackMenuScreenView.cpp  AttackMenuScreenView.hpp  BattleIntroScreen.cpp  BattleIntroScreen.hpp  BattleScreen.cpp  BattleScreen.hpp  BattleScreenView.cpp  BattleScreenView.hpp  CMakeLists.txt  GameOverScreen.cpp  GameOverScreen.hpp  VictoryScreen.cpp  VictoryScreen.hpp
src/screens/battle/attack/: AttackScreen.cpp  AttackScreen.hpp
src/screens/battle/attackCutscene/: AttackCutsceneScreen.cpp  AttackCutsceneScreen.hpp
src/screens/battle/attackMenu/: AttackMenuScreen.cpp  AttackMenuScreen.hpp  AttackMenuScreenView.cpp  AttackMenuScreenView.hpp
src/screens/battle/gameOver/: GameOverScreen.cpp  GameOverScreen.hpp
src/screens/battle/intro/: BattleIntroScreen.cpp  BattleIntroScreen.hpp
src/screens/battle/main/: BattleScreen.cpp  BattleScreen.hpp  (+2 more)
src/screens/map/: CMakeLists.txt  MapScreen.cpp  MapScreen.hpp  MapScreenView.cpp  MapScreenView.hpp  PlayerController.cpp  PlayerController.hpp
(+10 files in other folders)
